<resources>
    <string name="app_name">Just Java</string>
    <string name="Toppings">toppings</string>
    <string name="Name">name</string>
    <string name="Chocolate">chocolate</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">Quantity</string>
    <string name="decrement">-</string>
    <string name="zero">0</string>
    <string name="increment">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="zer2">$0</string>
    <string name="order">Order</string>
</resources>
